[package]
name = "doom_bootstrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.10", features = ["json", "blocking"] }
serde_json = "1.0.132"
serde = "1.0.214"
serde_derive = "1.0.214"
sysinfo = "0.32.0"
zip-extract = "0.2.1"